--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/grey1">
+
 
 
     <TextView
@@ -15,6 +17,7 @@
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:textSize="30dp"
         />
 
     <TextView
@@ -24,13 +27,14 @@
         android:background="@color/grey2"
         android:textColor="@color/white"
         app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/show" />
+        app:layout_constraintTop_toBottomOf="@+id/show"
+        android:textSize="30dp"/>
 
     <Button
         android:id="@+id/b11"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/showView"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -83,40 +87,43 @@
         android:background="@color/grey3"
         android:onClick="sentChu"
         />
+
     <Button
         android:id="@+id/b14"
         android:layout_width="60dp"
         android:layout_height="50dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/showView"
-        app:layout_constraintLeft_toRightOf="@id/b13"
+        android:background="@color/grey3"
+        android:gravity="center_horizontal"
 
+        android:onClick="sentCheng"
         android:text="*"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
-        android:background="@color/grey3"
-        android:onClick="sentCheng"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@id/b13"
+        app:layout_constraintStart_toEndOf="@+id/b13"
+        app:layout_constraintTop_toBottomOf="@id/showView" />
+
     <Button
         android:id="@+id/b21"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/b11"
-        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@color/grey3"
+        android:gravity="center_horizontal"
 
+        android:onClick="sentSeven"
         android:text="7"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:textAlignment="center"
-        android:gravity="center_horizontal"
-        android:background="@color/grey3"
-        android:onClick="sentSeven"
-        />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/b11" />
     <Button
         android:id="@+id/b22"
         android:layout_width="60dp"
@@ -173,7 +180,7 @@
         android:id="@+id/b31"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/b21"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -241,7 +248,7 @@
         android:id="@+id/b41"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/b31"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -292,7 +299,7 @@
         android:id="@+id/b51"
         android:layout_width="60dp"
         android:layout_height="50dp"
-        android:layout_marginLeft="5dp"
+        android:layout_marginLeft="40dp"
         android:layout_marginTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/b41"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -370,5 +377,6 @@
         android:background="@color/orange"
         android:onClick="sentEqual"
         />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
